src/assets/css/base/typography.css
@block heading-primary {
  backface-visibility: hidden; /* else elm moves slightly down 
  at the end of the animation */
  @apply tw-uppercase tw-text-white tw-font-regular;
  @apply tw-mb-6;
  @apply tw-overflow-scroll; /* else text overflows even the
  body, then shows empty extra screen to the x (nobody 
  understands why)*/
  -ms-overflow-style: none; /* IE 10+ */
  scrollbar-width: none; /* Firefox */

  &::-webkit-scrollbar {
    width: 0 !important; /* Safari and Chrome */
  }

  @modifier main {
    @include bal-letter-by-indent(4rem);
    animation: moveInLeft 2s ease-in-out;
    @apply tw-block tw-text-6xl;
    @apply tw-whitespace-no-wrap;

    @media (--phone) {
      @include bal-letter-by-indent(2rem);
      @apply tw-text-5xl;
    }

    @media (--desktop-big) {
      @include bal-letter-by-indent(4rem);
      @apply tw-text-6xl;
    }
  }

  @modifier sub {
    @include bal-letter-by-indent(2rem);
    animation: moveInRight 2s ease-in-out;
    @apply tw-block tw-font-bold tw-text-sm tw-leadingrel-6xl;

    @media (--desktop-big) {
      @include bal-letter-by-indent(2rem);
      @apply tw-leadingrel-6xl;
    }
  }
}

.heading-secondary {
  background-image: linear-gradient(to right, $color-theme-light, $color-theme);
  transition: all 0.2s;
  max-width: 100%;
  @apply tw-inline-block;
  @include bal-letter-by-indent(0.1em);
  @apply tw-text-4xl tw-uppercase tw-font-bold .mu-wk-clip-bg-to-text;

  @media (--desktop-big) {
    @apply tw-text-5xl;
  }

  &:hover {
    transform: skewY(2deg) skewX(10deg) scale(1.05);
    text-shadow: 0.5rem 1rem 2rem hsla(0, 0%, 0%, 0.2);
  }
}

.heading-tertiary {
  @apply tw-text-lg tw-uppercase tw-font-bold tw-mb-4;
}

.paragraph {
  @apply tw-text-2xl;

  &:not(:last-child) {
    @apply tw-mb-8;
  }
}

